# textlt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buttons.md  config.json  demo.cpp  help.txt  install.sh  output.txt  textlt_app_split_refactor.patch  textlt_tts_patch1b.diff
.github/workflows/: release.yml  static.yml
cmake/: apply_patch_once.cmake
docs/: ftxui-ui-refactoring-reference.md  index.html  install-textlt-linux.sh  install-textlt-macos.sh  install-textlt-windows.ps1  ui-button-system.md
docs/registries/: ollama_models_index.json  piper_voices_index.json
patches/: civetweb-v1.16-default-init-return.patch  ftxui-v5-hidden-cursor.patch  ftxui-v5-italic.patch  ftxui-v5-shortcuts.patch  ftxui-v7-alt-utf8.patch  ftxui-v7-shortcuts.patch
scripts/: textlt-install-piper-server.sh  textlt-install-runtime-deps.ps1  textlt-install-runtime-deps.sh  textlt-launcher.sh
src/: app.cpp  app.hpp  app_command_registry.cpp  app_command_registry.hpp  app_commands.cpp  app_distraction_actions.cpp  app_document_actions.cpp  app_event_dispatcher.cpp  app_event_dispatcher.hpp  app_file_actions.cpp  app_find_replace.cpp  app_menu_actions.cpp  app_modals.cpp  app_notes_actions.cpp  app_resources.cpp  app_resources.hpp  app_tts_actions.cpp  app_view.cpp  app_view.cpp.orig  app_workspace.cpp  bottom_bar_row.cpp  bottom_bar_row.hpp  builtin_text_processors.cpp  builtin_text_processors.hpp  cloud_tts_pipeline.cpp  cloud_tts_pipeline.hpp  config_manager.cpp  config_manager.hpp  curl_manager.cpp  curl_manager.hpp  custom_processor_builder.cpp  custom_processor_builder.hpp  distraction_mode_controller.cpp  distraction_mode_controller.hpp  document.cpp  document.hpp  document_content.cpp  document_cursor.cpp  document_editing.cpp  document_history.cpp  (+78 more)
src/ai/: ai_backend.cpp  ai_backend.hpp  ai_model_catalog.cpp  ai_model_catalog.hpp  ai_prompts.cpp  ai_prompts.hpp  ai_quick_status.hpp  local_llama_server.cpp  local_llama_server.hpp
src/builtin_text_processors/: analysis_extra_processors.cpp  analysis_processors.cpp  case_processors.cpp  catalog.cpp  cleanup_processors.cpp  common_text_utils.cpp  dispatch.cpp  line_processors.cpp  markdown_processors.cpp  paragraph_processors.cpp  processor_factory_utils.cpp  punctuation_processors.cpp  shared_processor_text_utils.cpp  table_processors.cpp  unicode_sort_utils.cpp
src/cloud_tts_pipeline/: audio_generation.cpp  book_library.cpp  common_utils.cpp  lifecycle.cpp  paths_persistence.cpp  preparation_chunking.cpp
src/editor/: clipboard_controller.cpp  clipboard_controller.hpp  document_file_controller.cpp  document_file_controller.hpp  document_session.cpp  document_session.hpp  document_session_ai.cpp  document_session_content.cpp  document_session_cursor.cpp  document_session_editing.cpp  document_session_history.cpp  document_session_selection.cpp  document_session_transform.cpp  document_workspace.cpp  document_workspace.hpp  editor_cursor_state.hpp  editor_viewport.cpp  editor_viewport.hpp  text_buffer.cpp  text_buffer.hpp
src/editor_component/: bracket_selection_helpers.cpp  common_editor_utils.cpp  cursor_navigation.cpp  document_state.cpp  editing_actions.cpp  history_line_actions.cpp  search_replace.cpp
src/lexers/: c_family_lexer.cpp  c_family_lexer.hpp  config_script_lexer.cpp  config_script_lexer.hpp  database_lexer.cpp  database_lexer.hpp  lexer_common.hpp  web_lexer.cpp  web_lexer.hpp
src/modals/: assistant_download_progress.cpp  assistant_download_progress.hpp  assistant_modals.cpp  assistant_modals.hpp  assistant_modals_ai.cpp  assistant_modals_server.cpp  assistant_modals_tts.cpp  file_dialog.cpp  file_dialog.hpp  help_dialog.cpp  help_dialog.hpp  modal_ai.cpp  modal_ai.hpp  modal_ai_quick_actions.cpp  modal_ai_quick_actions.hpp  modal_ai_settings.cpp  modal_ai_settings.hpp  modal_custom_processor_builder.cpp  modal_custom_processor_builder.hpp  modal_distraction_options.cpp  modal_distraction_options.hpp  modal_files.cpp  modal_files.hpp  modal_git.cpp  modal_git.hpp  modal_git_branches_server.cpp  modal_git_compare.cpp  modal_git_confirm.cpp  modal_git_remote_tags.cpp  modal_git_settings.cpp  modal_git_settings.hpp  modal_git_status_diff_commit.cpp  modal_git_utils.cpp  modal_import_text.cpp  modal_import_text.hpp  modal_interface.hpp  modal_keyboard_shortcuts.cpp  modal_keyboard_shortcuts.hpp  modal_recent_files.cpp  modal_recent_files.hpp  (+18 more)
src/notes/: note_document.cpp  note_document.hpp  note_repository.cpp  note_repository.hpp  note_serializer.cpp  note_serializer.hpp  note_session.cpp  note_session.hpp  notes_sync.cpp  notes_sync.hpp  notes_workspace_component.cpp  (+1 more)
src/remote/: README.md  (+36 more)
tests/: ai_backend_utils_test.cpp  ai_prompts_test.cpp  ai_quick_actions_test.cpp  app_command_registry_test.cpp  builtin_text_processors_test.cpp  custom_processor_builder_test.cpp  document_ai_transform_test.cpp  document_navigation_test.cpp  keyboard_shortcuts_test.cpp  no_embedded_curl_test.cpp  note_session_test.cpp  note_storage_test.cpp  notes_sync_test.cpp  notes_workspace_sync_test.cpp  piper_manager_test.cpp  remote_command_runner_streaming_test.cpp  remote_config_store_test.cpp  remote_dropbox_provider_test.cpp  remote_ftps_provider_test.cpp  remote_google_drive_provider_test.cpp  remote_http_client_test.cpp  remote_microsoft_drive_provider_test.cpp  remote_oauth_token_store_test.cpp  remote_path_test.cpp.orig  remote_path_test.cpp.rej  remote_sftp_provider_test.cpp  remote_ssh_config_test.cpp  shortcut_registry_test.cpp  syntax_highlighter_test.cpp  terminal_alt_utf8_test.cpp  text_importer_test.cpp  tts_audio_player_test.cpp  tts_pipeline_test.cpp  ui_button_test.cpp
text_processors/: default_text_parsers.json
themes/: blueprint.json  dark_mode.json  dracula.json  github_light.json  light_mode.json  mimo_night.json  night_violet.json  nord.json  pantone_ash_mauve.json  pantone_classic.json  pantone_grape_shadow.json  pantone_marsala.json  pantone_mint.json  pantone_mocha_dark.json  pantone_office_violet_dark.json  pantone_olive_grove_dark.json  pantone_peach.json  pantone_teal.json  solarized_light.json
(+125 files in other folders)
